# weathermap

./: .clang-format  CMakeLists.txt  LICENSE  README.md  images.qrc
qml/: MapView.qml  Marker.qml  main.qml
src/: Weather.cpp  Weather.h  main.cpp
